<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:parentTag="ScrollView">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/standard_margin">

        <TextView
            android:id="@+id/details_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/standard_margin"
            android:layout_marginEnd="@dimen/standard_margin"
            android:fontFamily="@font/cardo_bold"
            android:gravity="center"
            android:textSize="@dimen/text_size_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@tools:sample/full_names" />

        <ImageView
            android:id="@+id/details_image"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:adjustViewBounds="true"
            android:contentDescription="@null"
            android:cropToPadding="true"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/details_name"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <TextView
            android:id="@+id/details_temperament"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:fontFamily="@font/montserrat_semibold"
            android:textSize="@dimen/text_size_normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/details_image"
            tools:text="@tools:sample/full_names" />

        <TextView
            android:id="@+id/details_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="@dimen/text_size_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/details_temperament"
            tools:text="@tools:sample/lorem" />

        <TextView
            android:id="@+id/details_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/details_country"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/details_description" />

        <ImageView
            android:id="@+id/details_flag"
            android:layout_width="@dimen/country_flag_width"
            android:layout_height="@dimen/country_flag_height"
            android:adjustViewBounds="true"
            android:contentDescription="@null"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="@+id/details_country"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/details_country"
            tools:ignore="ImageContrastCheck"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/details_affection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/details_affection"
            android:textSize="@dimen/text_size_small"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/details_country" />

        <RatingBar
            android:id="@+id/details_affection_rating"
            style="@android:style/Widget.DeviceDefault.Light.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:stepSize="1"
            app:layout_constraintBottom_toBottomOf="@+id/details_affection"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/details_affection" />

        <TextView
            android:id="@+id/details_friendliness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/details_friendliness"
            android:textSize="@dimen/text_size_small"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/details_affection" />

        <RatingBar
            android:id="@+id/details_friendliness_rating"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:stepSize="1"
            app:layout_constraintBottom_toBottomOf="@+id/details_friendliness"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/details_friendliness" />

        <TextView
            android:id="@+id/details_intelligence"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/details_intelligence"
            android:textSize="@dimen/text_size_small"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/details_friendliness" />

        <RatingBar
            android:id="@+id/details_intelligence_rating"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:isIndicator="true"
            android:stepSize="1"
            app:layout_constraintBottom_toBottomOf="@+id/details_intelligence"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/details_intelligence" />

        <TextView
            android:id="@+id/details_energy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/details_energy"
            android:textSize="@dimen/text_size_small"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/details_intelligence" />

        <RatingBar
            android:id="@+id/details_energy_rating"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:isIndicator="true"
            android:stepSize="1"
            app:layout_constraintBottom_toBottomOf="@+id/details_energy"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/details_energy" />

        <TextView
            android:id="@+id/details_shedding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/details_shedding"
            android:textSize="@dimen/text_size_small"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/details_energy" />

        <RatingBar
            android:id="@+id/details_shedding_rating"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:isIndicator="true"
            android:stepSize="1"
            app:layout_constraintBottom_toBottomOf="@+id/details_shedding"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/details_shedding" />

        <TextView
            android:id="@+id/details_link"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/standard_margin"
            android:autoLink="web"
            android:ellipsize="end"
            android:fontFamily="@font/montserrat_regular"
            android:singleLine="true"
            android:text="@string/back_to_close"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/details_shedding" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</merge>